java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testBug113448c-hints.pass
Add throws clause for java.io.IOException
